Check in code for

--- a/DevOps_Jenkins_MVC/Views/Home/Contact.cshtml
+++ b/DevOps_Jenkins_MVC/Views/Home/Contact.cshtml
@@ -26,7 +26,7 @@
         <h3>Email</h3>
     </header>
     <p>
-        <span class="label">Support:</span>
+        <span class="label">Support:Indian Team</span>
         <span><a href="mailto:Support@example.com">Support@example.com</a></span>
     </p>
     <p>
